--- a/app/src/main/res/layout/play_layout.xml
+++ b/app/src/main/res/layout/play_layout.xml
@@ -8,14 +8,6 @@
     android:paddingBottom="8dp"
     android:paddingTop="8dp">
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:src="@drawable/ic_navigate_before_black_24dp"
-        android:layout_marginBottom="16dp"
-        android:id="@+id/back"/>
-
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -26,7 +18,7 @@
         android:id="@+id/artist_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
+        android:textSize="@dimen/artist_text_size"
         android:textStyle="bold"
         tools:text="artist" />
 
@@ -34,15 +26,15 @@
         android:id="@+id/title_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
+        android:textSize="@dimen/title_text_size"
         tools:text="title" />
 
     <TextView
         android:id="@+id/album_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="12sp"
         android:paddingBottom="8dp"
+        android:textSize="@dimen/album_text_size"
         tools:text="album" />
 
     <LinearLayout
@@ -51,24 +43,24 @@
         android:layout_gravity="center">
 
         <ImageButton
+            android:id="@+id/prev"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/ic_skip_previous_black_24dp"
-            android:id="@+id/prev"/>
+            android:src="@drawable/ic_skip_previous" />
 
         <ImageButton
+            android:id="@+id/play"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:src="@drawable/ic_play_circle_filled_black_24dp"
-            android:id="@+id/play"/>
+            android:src="@drawable/ic_play_circle_filled" />
 
         <ImageButton
+            android:id="@+id/next"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/ic_skip_next_black_24dp"
-            android:id="@+id/next"/>
+            android:src="@drawable/ic_skip_next" />
     </LinearLayout>
 </LinearLayout>
