Added all resolutions drawable added back button

--- a/app/src/main/res/layout/play_layout.xml
+++ b/app/src/main/res/layout/play_layout.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingBottom="16dp"
-        android:src="@drawable/vinyl" />
+        android:src="@drawable/ic_vinyl" />
 
     <TextView
         android:id="@+id/artist_text_view"
